<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_popular">
    <fragment
        android:id="@+id/nav_popular"
        android:name="com.example.nytimes.ui.popular.PopularFragment"
        android:label="@string/popular_label"
        tools:layout="@layout/popular_fragment">
        <action
            android:id="@+id/action_nav_popular_to_detailsFragment"
            app:destination="@id/nav_details"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left" />
        <action
            android:id="@+id/action_nav_popular_to_nav_settings"
            app:destination="@id/nav_settings"
            app:popUpTo="@id/nav_popular"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_details"
        android:name="com.example.nytimes.ui.details.DetailsFragment"
        android:label="@string/details_label"
        tools:layout="@layout/details_fragment">
        <argument
            android:name="article"
            app:argType="com.example.nytimes.data.remote.Article" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.nytimes.ui.settings.SettingsFragment"
        android:label="@string/settings" />
</navigation>