<resources>
    <!-- Reply Preference -->
    <string-array name="period_entries">
        <item>1 day</item>
        <item>7 days</item>
        <item>30 days</item>
    </string-array>

    <string-array name="period_values">
        <item>1.json</item>
        <item>7.json</item>
        <item>30.json</item>
    </string-array>
</resources>