<resources>
    <string name="app_name">NY Times</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="most_popular">Most Popular</string>
    <string name="popular_label">NY Times Most Popular</string>
    <string name="article_item">Article item</string>
    <string name="article_image_preview">Article Image preview</string>
    <string name="article_image_cover">Article Image Cover</string>
    <string name="open_in_ny_times">open in ny times</string>
    <string name="details_label">Details</string>


    <string name="date">Published: %s\nUpdated: %s</string>
    <!-- Preference Titles -->
    <string name="time_header">Time</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="period_title">Results in last</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>


</resources>